@@ -3,23 +3,15 @@ Hash: SHA256
 
 AUX xbatt-1.2.1-implicits.patch 297 SHA256 b41d6c234d471c07faf3bc41afe0fbca22051e865061eb49b08e6b317285aefe SHA512 a05010e7e51d2d9ca3d25344c3ed8b3d6c1761660140b7759827e30043ec0af75a444330eeee264df79fa89874886e120469d2f47ef2672471dbc6aed2e0cda4 WHIRLPOOL 666ed73b09ac7f22f709997e3760298d04fc875ccc711ce3bf070aea4e3d80da5b3c5d598a6094ec433a421f98f33df7228996423fb6d7780b28566f8023e593
 DIST xbatt-1.2.1.tar.gz 12779 SHA256 6c184c23e2be2b4934ccfcae39b158d5bab81e9f602a412bdbce57b436fd3b66 SHA512 db96f89e3abecd23532305069806ac094d5a31797f6f730d0f0d5345ac3f339286a5e3bcfc73d42a44a666bcbc768c955b9c3d8ca2fd28bd8239dfa109fe7020 WHIRLPOOL ba4268f33202b576b39837894c71172660d4103f07e11081d3e215828f87738067ac1798c50469342d29baa7d6523e7ff30aba91b5f7a57ebac5c48cce3b2506
+DIST xbatt-1.3pr1.tar.gz 14412 SHA256 aa41269247dd818ce1f92a16af3ea286ac34b395cb39daa1196fca5adfb5ed4b SHA512 f6022a2d464e22a31c8246f20c4dcab2be381ec63a02fb9ac1d3e28dc9bdf26a949735b2eba800941f5dfde371913ea7a560413191197c44a0c156a58a60d41d WHIRLPOOL abf6148df8ae8be6ea328f41b801c28e675959b6b0ec9a4b684fa7ce6c1b3b757209176203ac0bb318eff0dfc246b939853227fb02862684f983b60e8aa7652b
 EBUILD xbatt-1.2.1-r1.ebuild 921 SHA256 a14d925ef69615f61fc0f96448902cf61720927b86483050fdd59cb15dab0c5f SHA512 3b470a743eb2d605ebaacf14b9ab3f4edfd9d52ce1089d39b8a91a19502b9ad14b7d206e3aebe3a3805cfc8d75c7b0bc0ce4029740e1cb9a6a945f9d51223ade WHIRLPOOL b25bb1df8772ebd3c4f5c79c26f7c13d69fc83d01bf14b156b944e72987563b0c79d5d7b8c9bb10012c3451e9bc6bd01f5eb090529050ff18a96995f3837d0bd
-MISC ChangeLog 2327 SHA256 96bee13ba24b3113d3026e8c006245e65e99804aec5cc4e134264486d82a0dee SHA512 d8e717d73a86c3d6657047a81c13cccb076c2efa381851379f37dd563f9d1f7495cfa975f108b5faee140fec2525d4e98f4ec8b4b0a285653722d77b13311546 WHIRLPOOL 6939624859bad1f59c7ee064a1defc6aa30a93de8f58ba951983d2b3252773153a858ebbe80b51fc3cf06911d78c6eef48683acbc38988684056b9a6cf467967
+EBUILD xbatt-1.3_rc1.ebuild 1029 SHA256 1aa1bd8f2d00b6d5cd53be87d9d6755a3b6b57ad6f9ac16961b6a8d00789fbb6 SHA512 3a0f5f9d13574ef68415d3652495562036159cf47a4f18bcee1c96de18b826d2fea60e4d2f575e7bc188d52e1a2934f2c8e8a0b6ac55e159397d3fd457c2d87b WHIRLPOOL 2b171d0f384078111df5b8bef30448928642768499e5d9bbd31c5b5cea7f9aa1d9b28286d86b602d95079f04281b314351275d0d87b39720e0cd2b5fbf0ac6ae
+MISC ChangeLog 2467 SHA256 348ec8b5a725600d00d8853a10cf16c702eb6cbe1fc740afec8e10e9f9f2e4e7 SHA512 4f6b96f805f507d5f42bb71b29c491876de77000a40d492ae0748eeada00638e95073ed4ac354a87991aab30cd15bbcd42d029a482e78384d4df4080cf030617 WHIRLPOOL 01e62139e8ce94bb02a365772de96a788b5ca163f0497979544237985ed430dcc78bab600c8bde365367ea497dfb9aeacda61434275607588dc9f9cd1ca4c148
 MISC metadata.xml 173 SHA256 2f2c48f12680e78f700e809ba6ff98c67b1ea8b707291659c1bfb6b20d28835f SHA512 0f9f902a37286192de62589f1aace6bec3cfe2a8511ac95e98b55324a9da1a5e79b8f14316e1be0b818e90c0be0cec5fe16f75d9055301a774b241e1486f62c2 WHIRLPOOL 0d0c57c7890f2cdb7210d2d1d61d03d412478747414999bc7919d70b8243ddc66d7903df50158671e8cc454913b4d859f752bbe3709404aa15608e1f1234d717
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJRDVl7AAoJEDxpGckxwJCBfdkP/08NiWaKWIUfg7SJQNvRZb5U
-D5vEmUhjP1V3LhmaCw/jbMTM5qBiGu2Mx9YTF6K/p9nipVEr8IXqr33Ixd+fAZaG
-mIy98fZCgxDXNpnidgkh+PaFcKpWSP2fSjpLxfWT+OJMDnB9R9qRoYfVyq70erww
-EAvsrsDg9gNJuq1u7i6cGaJcT4Yt8MGqjefbND0OLuC2cj+uOnlJUnPOmwa9nv/b
-7ecRJirju2oocRV75FW/8ts3UAFIKKSUbyn0t22Qm7AfQSBP3+7TGR5LuGlScVYS
-JD3D6Vp7au8+tMt+Om10e01JcQvtNWgLEfa/WNtDGwqF0WBtph+AunWA7+xa66Fs
-Z59LrV35e06Hi1e3Sq1TN5s83501KBqHPxzOadZ9E8ethNmtZlT+UKBaJ6JPmMlx
-J99f0nakBT4e8v+a8ffHaNZDkQkHasmg7t1bzPEOzFVlfbgd51jBxIdQtP6tQJ0Q
-azJHI0SRaVY3lM2C5MMg6ToX7PeuKrrTpNZMnXkB9PpcllmaO9Ud67MMLJ0TcBwU
-J6HocSYwTxkHBa8npkXOxoPlF8wV87VwmlB/fiPefEGRJFzo6Ek3mlIkC/nORFOw
-JjFU2huDoi9s58u7nwuA16AAeJkdOwAdxSPLDU7T9xWLoITJF052Bf9QLYORp0uQ
-gwzDcI/lwhuHytIUGSAU
-=QlKn
+iEYEAREIAAYFAlXCT80ACgkQsAvGakAaFgCJ1gCdG1r6sKsAbOlQSLA1/V+zYt7n
+vzMAnjNZWzHZpVgrKuF3B7NQwzSDv0P9
+=buf3
 -----END PGP SIGNATURE-----
